--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+boto==2.43.0
 dj-database-url==0.4.1
 Django==1.10.3
+django-cors-headers==1.3.1
 django-disqus==0.5
 django-forms-bootstrap==3.0.1
 django-paypal==0.3.3
+django-storages==1.5.1
 funcsigs==1.0.2
 gunicorn==19.6.0
 mock==2.0.0
@@ -11,4 +14,3 @@ Pillow==3.4.2
 pytz==2016.7
 requests==2.12.1
 six==1.10.0
-MySQL-python==1.2.5
